--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,22 +35,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  table_calendar: 3.0.7
-  intl: 0.17.0
-  drift: 2.1.0
-  sqlite3_flutter_libs: 0.5.10
-  path_provider: 2.0.11
+  table_calendar: ^3.0.9
+  intl: ^0.18.1
+  drift: ^2.10.0
+  sqlite3_flutter_libs: ^0.5.15
+  path_provider: ^2.0.15
   path: 1.8.3
-  get_it: 7.2.0
-  dio: 4.0.6
-  provider: 6.0.3
-  uuid: 3.0.6
+  get_it: ^7.6.0
+  dio: ^5.3.0
+  provider: ^6.0.5
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  drift_dev: 2.1.0
-  build_runner: 2.2.0
+  drift_dev: ^2.10.0
+  build_runner: ^2.4.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
